--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </section>
         <section>
             <div class="container">
-                <div class="services">
+                <div class="services-title">
                 <h2 class="our-projects">Чем мы занимаемся</h2>
                 <ul>
                     <li class="services"><img src="./images/desktop1.jpg" width="370" height="295" alt="Програмирование"></li>
@@ -67,6 +67,7 @@
                 </div>
                 </ul>
         </section>
+        <div class="our-team-section">
         <section>
             <div class="container">
                 <div class="our-team-container">
@@ -96,6 +97,7 @@
                 </div>
             </div>
         </section>
+        </div>
     </main>
     <footer>
         <section>
@@ -103,7 +105,7 @@
                 <div class="container">
                     <a class="logo" href="./index.html"><span class="logo-word1">Web</span><span class="logo-word3">Studio</span></a>
                 <address class="address">
-                    <ul>
+                    <ul class="info-items">
                         <li><a class="map" href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858">пр-т Леси Украинки, 26</a></li>
                         <li><a class="contacts" href="mailto:info@example.com">info@devstudio.com</a></li>
                         <li><a class="contacts" href="tel:+380991111111">+38(099)111-11-11</a></li>
