--- a/portfolio.html
+++ b/portfolio.html
@@ -35,7 +35,7 @@
             <h1><span class="hide">Все проекты</span></h1>
             <div class="container">
                 <div class="projects-button">                   
-                    <ul class="projects-button">
+                    <ul class="projects-button-list">
                         <li>
                             <button class="portfolio-button" type="button">Все</button>
                         </li>     
@@ -85,17 +85,17 @@
                             <h3 class="project-name">Inspiration has no Borders</h3>
                             <p class="project-text">Веб-сайт</p>
                         </li>
-                            <li class="box">
+                            <li class="last-box">
                             <img src="./images/limitededition.jpg" width="370" height="295" alt="limitededition">
                             <h3 class="project-name">Издание Limited Edition</h3>
                             <p class="project-text">Дизайн</p>
                         </li>
-                        <li class="box">
+                        <li class="last-box">
                             <img src="./images/projectlab.jpg" width="370" height="295" alt="projectlab">
                             <h3 class="project-name">Проект LAB</h3>
                             <p class="project-text">Маркетинг</p>
                             </li>
-                        <li class="box">
+                        <li class="last-box">
                             <img src="./images/busines.jpg" width="370" height="295" alt="busines">
                             <h3 class="project-name">Growing Business</h3>
                             <p class="project-text">Приложение</p>
@@ -111,7 +111,7 @@
                 <div class="container">
                     <a class="logo" href="./index.html"><span class="logo-word1">Web</span><span class="logo-word3">Studio</span></a>
                 <address class="address">
-                    <ul>
+                    <ul class="info-items">
                         <li><a class="map" href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858">пр-т Леси Украинки, 26</a></li>
                         <li><a class="contacts" href="mailto:info@example.com">info@devstudio.com</a></li>
                         <li><a class="contacts" href="tel:+380991111111">+38(099)111-11-11</a></li>
