--- a/portfolio.html
+++ b/portfolio.html
@@ -23,10 +23,22 @@
                         <li class="pages"><a href="#">Контакти</a></li>
                     </ul>    
                 </nav>       
-                    <ul class="info-body">
-                        <li class="info"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                        <li class="info"><a href="tel:+380961111111">+38(096)111-11-11</a></li>
-                    </ul>
+                <ul class="info-body">
+                    <li class="info"> 
+                        <a href="mailto:info@devstudio.com">
+                            <svg class="envelope-icon">
+                                <use href="./images/svg/icons.svg#icon-envelope"></use>
+                            </svg>info@devstudio.com
+                        </a>
+                    </li>
+                    <li class="info">
+                        <a class="info-link" href="tel:+380961111111">
+                            <svg class="smartphone-icon">
+                                <use href="./images/svg/icons.svg#icon-smartphone"></use>
+                            </svg>+38(096)111-11-11
+                        </a>
+                    </li>    
+                </ul>
             </div>
         </div>          
     </header>
@@ -126,7 +138,8 @@
     <footer>
         <div class="footer">
             <div class="container">
-                <a class="logo" href="./index.html"><span class="logo-word1">Web</span><span class="logo-word3">Studio</span></a>
+                <div class="footer-container1">
+                    <a class="logo" href="./index.html"><span class="logo-word1">Web</span><span class="logo-word3">Studio</span></a>
             <address class="address">
                 <ul class="info-items">
                     <li><a class="map" href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858">г. Киев, пр-т Леси Украинки, 26</a></li>
@@ -134,8 +147,44 @@
                     <li><a class="contacts" href="tel:+380991111111">+38(099)111-11-11</a></li>
                 </ul>
             </address>
+                </div>
+            <div class="social-links">
+                <div class="footer-container2">
+                    <p class="social-links-text">Присоединяйтесь</p>
+                <ul>
+                    <li class="social-link-icon-item">
+                        <a class="inst-link-icon" href="">
+                            <svg class="social-link-icon">
+                                <use href="./images/svg/icons.svg#icon-instagram"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social-link-icon-item">
+                        <a class="twitt-link-icon" href="">
+                            <svg class="social-link-icon">
+                                <use href="./images/svg/icons.svg#icon-twitter"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social-link-icon-item">
+                        <a class="facebook-link-icon" href="">
+                            <svg class="social-link-icon">
+                                <use href="./images/svg/icons.svg#icon-facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social-link-icon-item">
+                        <a class="linkedin-link-icon" href="">
+                            <svg class="social-link-icon">
+                                <use href="./images/svg/icons.svg#icon-linkedin"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+                </div>                                                                                
             </div>
+        </div>
         </div>        
-</footer>
+    </footer>
 </body>
 </html>
